# keyboard

./: keyboard-cache.lib  keyboard.html  keyboard.pro  keyboard.xml
arduino/: generate.rb  platformio.ini
arduino code/: generate.rb  keyboard.ino
arduino code/keyboard/: betterkeyboard.cpp  betterkeyboard.h  keyboard.ino
arduino/lib/: .gitignore
arduino/src/: keyboard.cpp  keyboard.h
enclosure/: keyboard enclosure v1.f3d
library files/: Interface_Expansion.dcm  Interface_Expansion.lib
pcb/: keyboard.kicad_pcb  keyboard.sch
tutor/: .coveragerc  .gitignore  LICENSE-MIT  README.rst  pyproject.toml  setup.py
tutor/tutor/: keycircle.py  tutor.py
